--- a/public/app.html
+++ b/public/app.html
@@ -4,16 +4,21 @@
 	<title>Where is the closest uPrint?</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.js"></script>
 	<script src="script.js"></script>
+	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body ng-controller="UPCtrl">
-<div>
-Where is the closest uPrint?
-<ul>
-<li ng-repeat="printer in printers">
-<span>{{printer.building + " "+ printer.floor +" floor"+ "in "+printer.location}}</span>
-<span>color printing? {{printer.color}}<br />
-guest access? {{printer.guest}}</span>
-</li></ul>
-</div>
+	<div id="main">
+	<p id="iamat">I am at... <input ng-model="query.tit" placeholder="Burnside Hall, Redpath, Library Wong..."></p>
+	<p>The closest uPrint is...</p>
+	<ul>
+	<li ng-repeat="printer in printers | patmatch: query.tit">
+				<span>{{printer.building + " Building on floor "+ printer.floor}}
+				{{whereAgain(printer.location)}}<br />{{printer.tit}}
+				</span><br />
+				<span style="color:{{colorMe(printer.color)}}">color printing </span> | 
+					<span style="color:{{colorMe(printer.guest)}}">guest access</span>
+	</li>
+	</ul>
+	</div>
 </body>
 </html>
