--- a/public/app.html
+++ b/public/app.html
@@ -4,6 +4,7 @@
 	<title>Where is the closest uPrint?</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.js"></script>
 	<script src="script.js"></script>
+	<script src="services.js"></script>
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body ng-controller="UPCtrl">
